PLF-2177 JMX monitoring for Platform Cloud; env properties moved to setenv scripts (not for dev); moved tenant and IDE properties to configuration.properties